macro/tests/ui/file_not_found.rs
melior::dialect! {
    name: "func",
    files: ["IR/FuncOpsNotFound.td"],
}

fn main() {}
